--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,18 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.react-calendar {
+  width: 100% !important;
+  border: none !important;
+  font-family: "Inter", sans-serif !important;
+}
+
+.react-calendar__tile--active {
+    color: black !important;
+    background: #C3EBFA !important;
+}
+
+.react-calendar__navigation__label__labelText {
+  font-weight: 600;
+}
